--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 title: "Brendon's Math Stuff"
 description: "Personal math notes and research journal by Brendon Ahn"
 theme: minima
+
+header_pages:
+  - research.md
+  - courses.md
+  - others.md
